<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device_info_default">Unknown</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount SD card</string>
    <string name="sdcard_format">Erase SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Discoverable</string>
    <string name="bluetooth_is_discoverable">Discoverable for %1$s seconds…</string>
    <string name="bluetooth_is_discoverable_always">Discoverable</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <string name="bluetooth_fast_connect_on">Fast Bluetooth connections</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="airplane_mode_summary">Disable all wireless connections</string>
    <string name="device_hostname">Device hostname</string>
    <string name="date_and_time_settings_title">Date &amp; time</string>
    <string name="security_settings_title">Location &amp; security</string>
    <string name="bluetooth_settings_title">Bluetooth settings</string>
    <string name="hostname_save">Save</string>
    <string name="hostname_cancel">Cancel</string>
    <string name="sound_settings_title">Sound</string>
    <string name="display_settings_title">Display</string>
    <string name="display_settings">Display settings</string>
    <string name="animations_title">Animation</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screen_timeout">Screen timeout</string>
    <string name="screen_timeout_summary">Adjust the delay before the screen automatically turns off</string>
    <string name="baseband_version">Baseband version</string>
    <string name="kernel_version">Kernel version</string>
    <string name="build_number">Build number</string>
    <string name="device_status">Status</string>
    <string name="storage_settings_title">Storage settings</string>
    <string name="call_settings_title">Call settings</string>
    <string name="location_title">My Location</string>
    <string name="location_network_based">Use wireless networks</string>
    <string name="location_networks_disabled">See location in applications (such as Maps) using wireless networks</string>
    <string name="location_neighborhood_level">Location determined by Wi-Fi and/or mobile networks</string>
    <string name="location_gps">Use GPS satellites</string>
    <string name="location_street_level">When locating, accurate to street level</string>
    <string name="location_gps_disabled">Locate to street-level (requires more battery plus view of sky)</string>
    <string name="location_gps_source_title">GPS Source</string>
    <string name="location_gps_source_summary">Use external bluetooth gps mouse instead of internal as location provider.</string>
    <string name="about_settings">About phone</string>
    <string name="legal_information">Legal information</string>
    <string name="copyright_title">Copyright</string>
    <string name="license_title">License</string>
    <string name="terms_title">Terms and conditions</string>
    <string name="development_settings_title">Development</string>
    <string name="enable_adb">Android debugging</string>
    <string name="enable_adb_summary">Allow Android debug mode (ADB)</string>
    <string name="adb_over_network">ADB over network</string>
    <string name="adb_over_network_summary">Use debugging over Network (e.g. Wi-Fi) instead of USB. This setting is reset on reboot.</string>
    <string name="adb_notify">Debugging notify</string>
    <string name="adb_notify_summary">Display a notification when debugging is connected</string>
    <string name="keep_screen_on">Stay awake</string>
    <string name="keep_screen_on_summary">Screen will never sleep while charging</string>
    <string name="allow_mock_location">Allow mock locations</string>
    <string name="allow_mock_location_summary">Allow mock locations</string>
    <string name="kill_app_longpress_back">Stop app via long-press</string>
    <string name="kill_app_longpress_back_summary">Long-pressing the BACK button will kill the foreground application.</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="power_usage_summary_title">Battery use</string>
    <string name="voice_input_output_settings">Voice input &amp; output</string>
    <string name="vpn_openvpn_port">Server port</string>
    <string name="vpn_openvpn_protocol">Protocol to use</string>
    <string name="vpn_openvpn_device">Device to use</string>
    <string name="vpn_openvpn_advanced_titlebar">Advanced Openvpn Settings</string>
    <string name="vpn_openvpn_comp_lzo">LZO compression</string>
    <string name="vpn_openvpn_comp_lzo_summary">Force LZO compression to be set to on</string>
    <string name="vpn_openvpn_set_use_tls_auth">TLS-Auth</string>
    <string name="vpn_openvpn_set_use_tls_auth_summary">Use a tls-auth key</string>
    <string name="vpn_openvpn_set_tls_auth_key">TA key file location</string>
    <string name="vpn_openvpn_set_tls_auth_key_direction">Tls-Auth key direction</string>
    <string name="vpn_openvpn_redirect_gateway_title">Redirect gateway</string>
    <string name="vpn_openvpn_redirect_gateway_summary">Force all traffic to be routed through the VPN tunnel</string>
    <string name="vpn_openvpn_set_addr">Remote Sets Addresses</string>
    <string name="vpn_openvpn_set_addr_summary">Uncheck to set tunnel addresses manually</string>
    <string name="vpn_openvpn_set_local_addr">Local IP Address</string>
    <string name="vpn_openvpn_set_remote_addr">Remote IP Address</string>
    <string name="vpn_openvpn_set_cipher">Cipher algorithm</string>
    <string name="vpn_openvpn_set_cipher_message">Leave empty to use default cipher</string>
    <string name="vpn_openvpn_set_keysize">Size of cipher key</string>
    <string name="vpn_openvpn_set_keysize_message">Leave empty to use cipher-specific default</string>
    <string name="vpn_openvpn_set_extra">Extra arguments</string>
    <string name="vpn_openvpn_set_extra_message">Enter the extra command line arguments</string>
    <string name="vpn_settings_title">VPN settings</string>
    <string name="profile_title">Configure profiles</string>
    <string name="profile_appgroups_title">Application groups</string>
    <string name="menu_appgroups">Manage app groups</string>
    <string name="menu_new_profile">New profile</string>
    <string name="menu_new_profile_summary">Add and configure a new profile</string>
    <string name="profile_manage">Manage profiles</string>
    <string name="profile_reset_title">Reset</string>
    <string name="profile_reset_all_title">Reset all</string>
    <string name="profile_reset_all_summary">Delete and restore all profiles and application groups to default</string>
    <string name="privacy_settings">Privacy</string>
    <string name="personal_settings_tab">个人</string>
    <string name="system_settings_tab">系统</string>
    <string name="personal_password_title">锁屏密码</string>
    <string name="sync_settings_title">账户和同步</string>
    <string name="wallpaper_settings_title">壁纸</string>
    <string name="status_bar_toggle_settings">通知栏开关</string>
    <string name="carrier_settings_title">运营商</string>
    <string name="network_share_settings_title">共享手机网络</string>
    <string name="wifi_settings_title">WLAN</string>
    <string name="language_settings_title">语言和输入</string>
    <string name="mms_settings_title">短信</string>
    <string name="browser_settings_title">浏览器</string>
    <string name="launcher_settings_title">桌面效果</string>
    <string name="customized_theme_title">自定义主题</string>
    <string name="buttonlight_setting">Touch-key light work pattern</string>
</resources>