<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/about_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory>
        <Preference android:title="@string/baseband_version" android:key="baseband_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
        <Preference android:title="@string/kernel_version" android:key="kernel_version" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
        <Preference android:title="@string/build_number" android:key="build_number" android:summary="@string/device_info_default" style="?android:preferenceInformationStyle" />
        <!--<Preference android:title="@string/Author" android:key="Author" android:summary="hundan@rogue" style="?android:preferenceInformationStyle" />
        <Preference android:title="@string/legal_information" android:key="legal_information" style="?android:preferenceInformationStyle" />
-->
    </PreferenceCategory>

    <PreferenceCategory android:key="parent">
        <PreferenceScreen android:title="@string/legal_information" android:key="container">
            <PreferenceScreen android:title="@string/copyright_title" android:key="copyright">
                <intent android:action="android.settings.COPYRIGHT" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/license_title" android:key="license">
                <intent android:action="android.settings.LICENSE" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/terms_title" android:key="terms">
                <intent android:action="android.settings.TERMS" />
            </PreferenceScreen>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
